--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,6 +19,10 @@
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
           {% endif %}
         {% endfor %}
+
+        {% for category in site.categories %}
+          <a class="page-link" href="{{ site.baseurl }}/category/{{ category | first }}">{{ category | first }}</a>
+        {% endfor %}
       </div>
     </nav>
 
